--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <form class="js-toDoForm">
         <input type="text" placeholder="Write a to do" />
     </form>
-    <ul class="js-toDoList">
+    <ul class="js-toDoList toDoList">
 
     </ul>
-    <span class="js-weather"></span>
+    <span class="js-weather weather"></span>
 
     <script src="clock.js"></script>
     <script src="gretting.js"></script>
